# latex-translate

./: .gitignore  README.md  latex_translate.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  llm_client.py  simple_translator.py
